<resources>
    <string name="app_name">GetGitInfoApp</string>
    <string name="base_url">https://api.github.com/</string>
    <string name="repositories">Repositories</string>
    <string name="repository_detail">Repository Detail</string>
    <string name="not_readme">This Repository doesn\'t have a README.</string>
    <string name="watch">Watchers</string>
    <string name="example_count_20">20</string>
    <string name="star">Stars</string>
    <string name="fork">Forks</string>
    <string name="repository_id">Repository ID :</string>
    <string name="repository_full_name">Repository full Name : </string>
    <string name="repository_user_name">Repository user Name :</string>
    <string name="repository_url">Repository URL :</string>
    <string name="repository_open_issues">Repository open Issues :</string>
    <string name="repository_default_branch">Repository default branch :</string>
    <string name="read_me_content">Read Me Content</string>
</resources>
